update function arg: freq_test

--- a/assignments/hw1_get_started/hw1_get_started.ipynb
+++ b/assignments/hw1_get_started/hw1_get_started.ipynb
@@ -179,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def freq_test(hist):\n",
+    "def freq_test(freq):\n",
     "    test.equal(freq(range(10)), {x: 1 for x in range(10)})\n",
     "    test.equal(freq(\"AABBBCCCD\"), {\"A\": 2, \"B\": 3, \"C\": 3, \"D\": 1})\n",
     "    test.equal(freq([\"Apple\", \"Ball\", \"Apple\", \"Cat\"]), {\"Apple\": 2, \"Ball\": 1, \"Cat\": 1})\n",
