fix freq count arg

--- a/assignments/hw1_get_started/hw1_get_started.ipynb
+++ b/assignments/hw1_get_started/hw1_get_started.ipynb
@@ -185,7 +185,7 @@
     "    test.equal(freq([\"Apple\", \"Ball\", \"Apple\", \"Cat\"]), {\"Apple\": 2, \"Ball\": 1, \"Cat\": 1})\n",
     "\n",
     "@test\n",
-    "def freq(l, b):\n",
+    "def freq(n):\n",
     "    \"\"\" Create a counter.\n",
     "    \"\"\"\n",
     "    return None"
